--- a/NewSalesProject/Controls/MyDataList.xaml
+++ b/NewSalesProject/Controls/MyDataList.xaml
@@ -130,7 +130,7 @@
                         <Setter Property="Width" Value="24"/>
                     </Style>
                 </StackPanel.Resources>
-                <Button Name="RefreshButton" Style="{StaticResource MaterialDesignRaisedButton}" Margin="10" Padding="0" Command="{Binding RefreshCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" CommandParameter="Refresh">
+                <Button Name="RefreshButton" Click="RefreshButton_Click" Style="{StaticResource MaterialDesignRaisedButton}" Margin="10" Padding="0" Command="{Binding RefreshCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" CommandParameter="Refresh">
                     <materialDesign:PackIcon Kind="Refresh"/>
                 </Button>
                 <Button Name="AddButton" IsEnabled="False" Style="{StaticResource MaterialDesignRaisedButton}" Margin="10" Padding="0" Command="{Binding AddCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" CommandParameter="CreateNew">
