--- a/NewSalesProject/Views/DataUpdate/GoodsReceipt/GoodsReceiptView.xaml
+++ b/NewSalesProject/Views/DataUpdate/GoodsReceipt/GoodsReceiptView.xaml
@@ -18,7 +18,7 @@
 
             <controls:MyDataList 
             x:Name="DtGrid"
-            Title="GoodsReceipt's List"
+            Title="Receipt Invoice's List"
             ItemsSource="{Binding ViewItems}" 
             SelectedItem="{Binding SelectedItem}"
             SelectedIndex="{Binding SelectedIndex}"
@@ -40,7 +40,7 @@
 
             <DockPanel Grid.Column="2" Margin="2">
                 <Grid DockPanel.Dock="Top">
-                    <controls:DetailsHeaderBar x:Name="HeaderBar" HeaderText="Selected Product: " Text="{Binding InEditItem.Name}"/>
+                    <controls:DetailsHeaderBar x:Name="HeaderBar" HeaderText="Selected Invoice Code: " Text="{Binding InEditItem.InvoiceCode}"/>
                 </Grid>
 
                 <Separator DockPanel.Dock="Top"/>
@@ -60,7 +60,7 @@
                                 </Style>
                             </DockPanel.Resources>
 
-                            <RadioButton Checked="MenuToggleRadioButton1_Checked" DockPanel.Dock="Right" Margin="0 2 2 4" Background="#ff884d" Name="WishListButton1">
+                            <RadioButton Visibility="Collapsed" Checked="MenuToggleRadioButton1_Checked" DockPanel.Dock="Right" Margin="0 2 2 4" Background="#ff884d" Name="WishListButton1">
                                 <TextBlock Text="Wish List"/>
                             </RadioButton>
 
@@ -69,7 +69,7 @@
                                     <TextBlock Text="Details"/>
                                 </RadioButton>
 
-                                <RadioButton Checked="MenuToggleRadioButton1_Checked" Name="PriceListButton1">
+                                <RadioButton Visibility="Collapsed" Checked="MenuToggleRadioButton1_Checked" Name="PriceListButton1">
                                     <TextBlock Text="Price List"/>
                                 </RadioButton>
 
