--- a/NewSalesProject/Views/DataUpdate/Product/ReceiptInvoiceView.xaml
+++ b/NewSalesProject/Views/DataUpdate/Product/ReceiptInvoiceView.xaml
@@ -204,6 +204,7 @@
 
                         <Grid VerticalAlignment="Bottom">
                             <Button Name="AddButton" Click="AddButton_Click" Command="{Binding CRUDCommand}" CommandParameter="Add"
+                                IsEnabled="{Binding SelectedProduct, Converter={x:Static converters:NullToBooleanConverter.Instance}}"
                                 Style="{StaticResource MaterialDesignFlatButton}" HorizontalAlignment="Right">
                                 <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                                     <materialDesign:PackIcon VerticalAlignment="Center" Height="20" Width="20" Kind="Add"/>
@@ -419,7 +420,7 @@
 
                             <DockPanel>
                                 <TextBlock Margin="2" Text="Purchased In Store: " VerticalAlignment="Center"/>
-                                <ComboBox DisplayMemberPath="Name" Background="#cceeff" Margin="4 0 10 0" IsEditable="True"
+                                <ComboBox Name="StoreCbb" DisplayMemberPath="Name" Background="#cceeff" Margin="4 0 10 0" IsEditable="True"
                                           SelectedItem="{Binding GoodsReceiptVM.NewItem.Store}"
                                           ItemsSource="{x:Static support:DataAccess.Stores}"/>
                             </DockPanel>
@@ -428,7 +429,7 @@
                     </Grid>
 
                     <Grid DockPanel.Dock="Bottom">
-                        <Button Command="{Binding GoodsReceiptVM.CRUDCommand}" CommandParameter="Add" Padding="20 2" Margin="10 4" HorizontalAlignment="Right" Foreground="White">
+                        <Button IsEnabled="{Binding ElementName=StoreCbb, Path=SelectedItem, Converter={x:Static converters:NullToBooleanConverter.Instance}}" Command="{Binding GoodsReceiptVM.CRUDCommand}" CommandParameter="Add" Padding="20 2" Margin="10 4" HorizontalAlignment="Right" Foreground="White">
                             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                                 <materialDesign:PackIcon Margin="0 0 4 0" VerticalAlignment="Center" Kind="Plus"/>
                                 <TextBlock Text="Add"/>
